fixed 2 images spilling out of container

--- a/css/style.css
+++ b/css/style.css
@@ -281,11 +281,11 @@ section .title::after {
   background: #222;
   text-align: center;
   border-radius: 6px;
-  padding: 50px 25px;
+  padding: 25px 25px;
   cursor: pointer;
   transition: all 0.3s ease;
   margin: 5px;
-  height: 350px;
+  height: 400px;
 }
 .services .serv-content .card:hover {
   background: crimson;
